<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ModeSelectActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:theme="@style/Theme.DiabetesCompanion" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/select_mode_statement"
        android:textSize="24sp"
        android:theme="@style/Theme.DiabetesCompanion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ModeSelectActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:padding="12dp"
            android:text="@string/text_txt_mode_select"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_btn_doctor"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:layout_margin="12dp"
            android:textColor="@color/dark_grey" />

        <Button
            android:id="@+id/btn_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_btn_patient"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:layout_margin="12dp"
            android:textColor="@color/dark_grey" />
    </LinearLayout>
</LinearLayout>